--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,13 @@ dist
 dist-ssr
 *.local
 
-# Explicitly ignore env file with secrets
+# Vercel
+.vercel
+
+# Environment variables
+.env
 .env.local
+.env.production
 
 # Editor directories and files
 .vscode/*
