--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "echo 'Building for Vercel...'"
   },
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "@google/genai": "^1.38.0",
-    "firebase": "^12.8.0"
+    "firebase": "^12.8.0",
+    "@vercel/node": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
